Add ListView ClickListener

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
+
+    <TextView
+        android:id="@+id/set_shortcut_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/shortcut_list_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="20px" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/set_app_list"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/set_shortcut_title"
         app:layout_constraintStart_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/app_list_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/set_app_list"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/app_list_view_title"
+        android:layout_marginLeft="20px" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/app_list"
-        app:layout_constraintTop_toBottomOf="@id/set_app_list"
+        app:layout_constraintTop_toBottomOf="@id/app_list_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
