--- a/app/src/main/res/layout/app_list_item.xml
+++ b/app/src/main/res/layout/app_list_item.xml
@@ -6,16 +6,20 @@
 
     <ImageView
         android:id="@+id/app_icon"
-        android:layout_width="wrap_content"
+        android:layout_width="100px"
         android:layout_height="100px"
+        android:layout_marginLeft="20px"
+        android:layout_marginTop="10px"
+        android:layout_marginBottom="10px"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="10dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/app_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         app:layout_constraintStart_toEndOf="@id/app_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
