--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
         app:layout_constraintTop_toBottomOf="@id/set_shortcut_title"
         app:layout_constraintStart_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"/>
 
     <TextView
         android:id="@+id/app_list_title"
