--- a/app/src/main/res/layout/dialog_set_app.xml
+++ b/app/src/main/res/layout/dialog_set_app.xml
@@ -6,11 +6,13 @@
 
     <ImageView
         android:id="@+id/app_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200px"
+        android:layout_height="200px"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginHorizontal="20dp"/>
+        android:layout_marginTop="20px"
+        android:layout_marginRight="30px"
+        android:layout_marginLeft="20px"/>
 
     <TextView
         android:id="@+id/app_label"
